# crypt

./: .gitignore  Cargo.toml  LICENSE
.joy/: project.yaml
.joy/items/: CRYPT-0001-joycrypt-e2e-encryption-layer.yaml  CRYPT-0002-aes-256-gcm-encrypt-decrypt-core-in.yaml  CRYPT-0003-key-generation-and-storage.yaml  CRYPT-0004-git-clean-smudge-filters-for.yaml  CRYPT-0005-joy-crypt-cli-commands-init-lock.yaml  CRYPT-0006-transparent-file-i-o-in-joy-core-using.yaml  CRYPT-0007-cleartext-metadata-extraction-for.yaml  CRYPT-0008-web-crypto-api-integration-for-browser.yaml  CRYPT-0009-key-sharing-for-team-and-caldav-access.yaml  CRYPT-000A-crypt-documentation-vision-and.yaml  CRYPT-000B-B7-initialize-joy-crypt-crate-skeleton.yaml  CRYPT-000C-A4-implement-core-crypto-primitives-in.yaml  CRYPT-000D-E7-add-x25519-pairwise-primitive-for.yaml  CRYPT-000E-1E-adr-passphrase-derived-human-ai.yaml  CRYPT-000F-B2-adr-selective-encryption-with-optional.yaml  CRYPT-0010-5A-adr-wrapped-seed-identity-model-with.yaml  CRYPT-0011-A0-adr-selective-e2e-by-default-no-git.yaml  CRYPT-0012-99-adr-ai-tool-crypt-passphrase-derived.yaml  CRYPT-0013-D7-adr-client-side-encryption-with.yaml
crates/joy-crypt/: Cargo.toml
crates/joy-crypt/src/: aead.rs  error.rs  identity.rs  kdf.rs  lib.rs  pairwise.rs  session_wrap.rs  wrap.rs  zone.rs
