[workspace]
resolver = "2"
members = ["crates/joy-crypt"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/joyint/crypt"

[workspace.dependencies]
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
rand_core = { version = "0.6", features = ["std"] }
thiserror = "2.0"

[profile.release]
lto = "thin"
