[workspace]
resolver = "2"
members = ["crates/joy-crypt"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/joyint/crypt"

[workspace.dependencies]
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
thiserror = "2.0"

[profile.release]
lto = "thin"
