[package]
name = "joy-crypt"
version = "0.1.0"
description = "Cryptographic primitives for Joy: KDF, AEAD, Ed25519, key wrapping"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Fast Argon2id parameters for tests and debug builds. NOT secure for production.
fast-kdf = []

[dependencies]
argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
x25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
thiserror = { workspace = true }
